# pretix-fsr-validation

./: .update-locales.sh  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
pretix_fsr_validation/: __init__.py  apps.py  signals.py  urls.py  views.py
pretix_fsr_validation/locale/de/LC_MESSAGES/: django.po
pretix_fsr_validation/locale/de_Informal/LC_MESSAGES/: django.po
pretix_fsr_validation/templates/pretix_fsr_validation/: check_tickets.html  order_info_top.html  settings.html
